# forex-prediction

./: setup.cfg  setup.py
