[metadata]
name = tensorflow_prediction
version = 1.0
author = Nagi
author_email = komoootv@gmail.com
description = A platform for forex-prediction.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Adriaan1/forex-prediction.git
classifiers =
    Programming Language :: Python :: 3
    License :: MIT
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    pandas
    yfinance
    pyfiglet
    PyYAML
    v20
    bokeh
    plotly
    tensorflow
    einops
    yfinance
    numpy
    sklearn

[options.packages.find]
where = .
